--- a/assets/css/food.css
+++ b/assets/css/food.css
@@ -10,3 +10,11 @@
 #recipesDiv {
     font-size:20px;
 }
+.button-circle{
+    text-align: center;
+    margin-right: 4%;
+}
+#supportNum {
+    
+    margin-top:2%;
+}
